# Optix-Path-Tracer

./: README.md
Source/: CMakeLists.txt
Source/OptixHello/: CMakeLists.txt  optixHello.cpp
Source/OptixLambert/: CMakeLists.txt  Params.h  RenderState.cpp  RenderState.h  deviceProgram.cu
Source/OptixLighting/: CMakeLists.txt  Params.h  RenderState.cpp  RenderState.h  deviceProgram.cu
Source/OptixPipeline/: CMakeLists.txt  Params.h  RenderState.cpp  RenderState.h  deviceProgram.cu  main.cpp
Source/OptixSphere/: CMakeLists.txt  Params.h  RenderState.cpp  RenderState.h  deviceProgram.cu  main.cpp
Source/OptixTRY/: CMakeLists.txt  Params.h  RenderState.cpp  RenderState.h  build.cpp  build.h  deviceProgram.cu  main.cpp
Source/OptixWindow/: CMakeLists.txt  Params.h
Source/cuda/: MaterialData.h  whitted.h
Source/data/Duck/: Duck.gltf  DuckHole.gltf
Source/data/Plane/: biplane.gltf  biplane_propeller.gltf
